# Python-IXA-Pipes

./: .gitignore  README.md  models.py  pos.py  setup.cfg  tok.py  tokenizer.py  utils.py
ixapipes/: IxaPipesModule.py
