[metadata]
name = ixapipes
version = 0.0.1
author = Iker García Ferrero
author_email = iker.garciaf@ehu.eus
description = Python bindings for Ixa Pipes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ikergarcia1996/Python-IXA-Pipes
project_urls =
    Bug Tracker = https://github.com/ikergarcia1996/Python-IXA-Pipes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ApacheLicense :: 2.0
    Operating System :: Linux

[options]
packages = find:
python_requires = >=3.6
